feat: update CORS configuration to use dynamic allowed origins and expose Content-Disposition header